objects/EmailCampaign__c.object
<CustomObject>
    <fields>
        <fullName>Available_to_Use__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to check which template i available for sending.</description>
        <label>Available to Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampEmailTemplate__c</fullName>
        <label>CampEmailTemplate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampFromEmailId__c</fullName>
        <label>CampFromEmailId</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CampFromName__c</fullName>
        <label>CampFromName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampSubject__c</fullName>
        <label>CampSubject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CampType__c</fullName>
        <label>CampType</label>
        <picklist>
            <picklistValues>
                <fullName>Announcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registration email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reminder</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivered__c</fullName>
        <label>Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Send_Date__c</fullName>
        <label>Email Send Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Status__c</fullName>
        <label>Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>EmailCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_CampaignId__c</fullName>
        <label>Ext_mail_server_CampaignId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_ListId__c</fullName>
        <label>Ext_mail_server_ListId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_SegmenttId__c</fullName>
        <label>Ext_mail_server_SegmenttId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_TemplateId__c</fullName>
        <label>Ext_mail_server_TemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_apikey__c</fullName>
        <label>Ext_mail_server_apikey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_name__c</fullName>
        <label>Ext_mail_server_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ext_mail_server_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ext_mail_server_sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feature_Type__c</fullName>
        <label>Feature Type</label>
        <picklist>
            <picklistValues>
                <fullName>Emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Notifications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mail_Sent__c</fullName>
        <label>Mail Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Retrieval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MatchLeads</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Schedule_Id__c</fullName>
        <label>Schedule Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Template_Type__c</fullName>
        <label>System Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Order Confirmation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ticket Confirmation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Body__c</fullName>
        <label>Template Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Template_Status__c</fullName>
        <label>Template Status</label>
        <picklist>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Template_Type__c</fullName>
        <label>Template Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToListType__c</fullName>
        <label>ToListType</label>
        <picklist>
            <picklistValues>
                <fullName>All Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected Contacts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ToList__c</fullName>
        <label>ToList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>auto_schedule_Type__c</fullName>
        <description>This is the field to identify auto schedule the campaign  based on days before the event or selected date</description>
        <label>auto schedule Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>BLN Email Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Ext_mail_server_apikey__c</columns>
        <columns>CampType__c</columns>
        <columns>CampEmailTemplate__c</columns>
        <columns>Template_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Ext_mail_server_apikey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kalyan</value>
        </filters>
        <label>All1</label>
    </listViews>
    <nameField>
        <label>EmailCampaign Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Email Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>